adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Meu primeiro versionamento de código</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint voluptates aperiam corrupti quia, aspernatur incidunt nostrum rerum quidem doloribus laudantium commodi repellendus! Unde, ea doloribus eum animi eligendi aspernatur soluta.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quis non nostrum ea accusantium odit atque omnis voluptatum reprehenderit, at veniam quaerat doloremque necessitatibus eaque. Tenetur nostrum corporis illum nam?</p>
 </body>
 </html>
